--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ build/*
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-*.xcworkspace
-!default.xcworkspace
 xcuserdata
 profile
 *.moved-aside
+.DS_Store
