Started AdHoc provisioning.

--- a/VandyMobile/VandyMobile-Info.plist
+++ b/VandyMobile/VandyMobile-Info.plist
@@ -21,7 +21,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.ggDevs.grahamgaylor.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.vanderbilt.vandymobile</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
