--- a/VandyMobile/VandyMobile-Info.plist
+++ b/VandyMobile/VandyMobile-Info.plist
@@ -14,18 +14,19 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>VandyMobileIconRetina5.png</string>
+				<string>Icon.png</string>
+				<string>114.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.vanderbilt.vandymobile</string>
+	<string>edu.vanderbilt.cs292.mobiletourguide</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>mobiletourguide</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
